--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,9 +8,9 @@ phases:
     runtime-versions:
       java: corretto11
     commands:
-      - apt-get update
-      - apt-get install -y docker.io
-      - service docker start
+      - yum update -y
+      - yum install -y docker
+      - service docker star
 
   pre_build:
     commands:
