--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
       java: corretto11
     commands:
       - yum update -y
-      - yum install -y docker
+      - yum install -y docker-ce
       - service docker star
 
   pre_build:
