--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,8 +10,8 @@ phases:
       - mvn clean install
       - echo Logging in to Amazon ECR...
       - aws --version
-      - $(aws ecr get-login --region us-east-2 --no-include-email)
-      #- aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 885578568250.dkr.ecr.us-east-2.amazonaws.com
+      #- $(aws ecr get-login --region us-east-2 --no-include-email)
+      - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 885578568250.dkr.ecr.us-east-2.amazonaws.com
       - REPOSITORY_URI=885578568250.dkr.ecr.us-east-2.amazonaws.com/app_repo
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
