--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,7 @@ version: 0.2
 env:
   variables:
     AWS_DEFAULT_REGION: us-east-2
+    REPOSITORY_URI: 885578568250.dkr.ecr.us-east-2.amazonaws.com/app_repo
 
 phases:
 
@@ -25,6 +26,7 @@ phases:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
+      - REPOSITORY_URI=885578568250.dkr.ecr.us-east-2.amazonaws.com/app_repo
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - echo Writing image definitions file...
